bonus/confs/gitlab/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab
  annotations:
    IOT/owner: "m&m's"
