bonus/confs/gitlab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bonus-ingress
  namespace: gitlab
  annotations:
    IOT/owner: "m&m's"
  labels:
    iot: bonus
spec:
  # tls:
  # - hosts:
  #     - mygitlab.ru
  #   secretName: secret-tls
  #   secretName: hello-app-tls
  rules:
  - host: mygitlab.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab
            port:
              number: 80
